# iotics-grpc-client-rs

./: .env-sample  .gitmodules  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  build.rs
.github/workflows/: ci.yaml  publish.yaml
examples/: auth.rs  inputs.rs  search.rs
proto/feed/: model.proto
proto/iotics/api/: common.proto  feed.proto  interest.proto  search.proto  twin.proto
proto/twin/: model.proto  service.proto
src/: auth_builder.rs  channel.rs  common.rs  helpers.rs  host.rs  input.rs  interest.rs  lib.rs  properties.rs  search.rs  twin.rs
src/api/: common.rs  feed.rs  interest.rs  search.rs  twin.rs
src/client/: iotics.api.rs
src/twin/: crud.rs  describe.rs  list.rs  mod.rs  share.rs  upsert.rs
