[package]
name = "iotics-grpc-client"
version = "0.2.2"
description = "IOTICS gRPC client"
license = "Apache-2.0"
repository = "https://github.com/Iotic-Labs/iotics-grpc-client-rs"
homepage = "https://iotics.com"
edition = "2021"

[dependencies]
tonic = { version = "0.6", features = ["tls-webpki-roots"] }
prost = "0.9"
prost-types = "0.9"
tokio = { version = "1.15", features = ["macros", "rt-multi-thread", "time"] }
rand = "0.8"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[build-dependencies]
tonic-build = "0.6"
