[package]
name = "iotics-grpc-client"
version = "5.0.0"
edition = "2021"
description = "IOTICS gRPC client"
license = "Apache-2.0"
repository = "https://github.com/Iotic-Labs/iotics-grpc-client-rs"
homepage = "https://iotics.com"

[lib]
# skipping because we don't have any doc tests ourselves
# however the run fails because of the prost generated comments
doctest = false

[features]
default = []
tls = ["tonic/tls-webpki-roots"]

[dependencies]
anyhow = "1.0"
prost = "0.11"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread", "time"] }
tonic = { version = "0.8" }

[dev-dependencies]
iotics-identity = { git = "https://github.com/Iotic-Labs/iotics-identity-go.git" }
dotenv = "0.15"
log = "0.4"
pretty_env_logger = "0.4"

[build-dependencies]
tonic-build = "0.8"
